compiler-core/src/go/tests/snapshots/gleam_core__go__tests__results__aliased_error_fn.snap
---
source: compiler-core/src/go/tests/results.rs
expression: "import gleam.{Error as Thing}\npub fn main() { Thing }"
snapshot_kind: text
---
----- SOURCE CODE
import gleam.{Error as Thing}
pub fn main() { Thing }

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main[J gleam_P.Type[J], K gleam_P.Type[K]]() gleam_P.Func1_t[
  J,
  gleam_P.Result_t[K, J],
] {
  return func(P_0 J) gleam_P.Result_t[K, J] { return gleam_P.Error_c[K, J]{P_0} }
}
