compiler-core/src/go/tests/snapshots/gleam_core__go__tests__results__ok_fn.snap
---
source: compiler-core/src/go/tests/results.rs
expression: "pub fn main() { Ok }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { Ok }

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main[J gleam_P.Type[J], K gleam_P.Type[K]]() gleam_P.Func1_t[
  J,
  gleam_P.Result_t[J, K],
] {
  return func(P_0 J) gleam_P.Result_t[J, K] { return gleam_P.Ok_c[J, K]{P_0} }
}
