compiler-core/src/go/tests/snapshots/gleam_core__go__tests__results__qualified_ok.snap
---
source: compiler-core/src/go/tests/results.rs
expression: "import gleam\npub fn main() { gleam.Ok(1) }"
snapshot_kind: text
---
----- SOURCE CODE
import gleam
pub fn main() { gleam.Ok(1) }

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main[K gleam_P.Type[K]]() gleam_P.Result_t[gleam_P.Int_t, K] {
  return gleam_P.Ok_c[gleam_P.Int_t, K]{1}
}
